<resources>
    <string name="app_name">a-la-vez</string>
    <string name="title_login">로그인</string>
    <string name="input_login">아이디를 입력해주세요</string>
    <string name="check_box">로그인 상태 유지 </string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="signcheck">회원이 아니신가요?</string>
    <string name="signname">이름을 입력해주세요</string>
    <string name="signemail">이메일을 입력해주세요</string>
    <string name="signrepassword">비밀번호를 다시 입력해주세요</string>
    <string name="title_register">회원가입</string>
    <string name="navigation_mypage">마이페이지</string>
    <string name="navigation_find">스터디 모집</string>
    <string name="navigation_make">관심있는 스터디</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>