<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_find_group"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_all_inclusive_24"
        android:title="@string/navigation_find"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_fav_group"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/navigation_make"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/navigation_mypage"
        app:showAsAction="ifRoom" />

</menu>